# spline-editor

./: .gitignore  Cargo.toml  readme.md  test.curve
examples/: linear.curve  simple.curve
src/: consts.rs  draw.rs  encoders.rs  main.rs  resources.rs  spline.rs
