[package]
name = "rs-spline-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {version = "0.11.2", features = ["dynamic_linking"]} # for dev
bevy = {version = "0.11.2"} # for release
rand = "0.8.5"
arboard = {version = "3.2.1", features = ["wayland-data-control"]}
bevy_embedded_assets = "0.8.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

